--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,13 @@
         android:id="@+id/gotosigning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginLeft="161dp"
+        android:layout_marginStart="162dp"
+        android:layout_marginLeft="162dp"
         android:layout_marginTop="439dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginRight="162dp"
+        android:layout_marginEnd="161dp"
+        android:layout_marginRight="161dp"
         android:layout_marginBottom="244dp"
+        android:background="@drawable/mybutton"
         android:text="Sign in"
         android:textColor="#070000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,6 +35,7 @@
         android:layout_marginEnd="127dp"
         android:layout_marginRight="127dp"
         android:layout_marginBottom="171dp"
+        android:background="@drawable/mybutton"
         android:text="*Create Account*"
         android:textColor="#050000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,6 +53,7 @@
         android:layout_marginEnd="312dp"
         android:layout_marginRight="312dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/mybutton"
         android:text="About Us"
         android:textColor="#0C0000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,15 +69,17 @@
         android:layout_marginStart="312dp"
         android:layout_marginLeft="312dp"
         android:layout_marginTop="667dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginRight="11dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/mybutton"
         android:text="Contact"
         android:textColor="#090000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/backgroundpicture" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -84,6 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.509"
         app:srcCompat="@drawable/backgroundpicture" />
 
     <EditText
@@ -108,17 +114,18 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
-        android:layout_marginLeft="175dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="175dp"
-        android:layout_marginRight="175dp"
-        android:layout_marginBottom="645dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginBottom="643dp"
         android:background="#01DF8BED"
         android:text="Log In"
         android:textColor="#131313"
         android:textSize="22sp"
         android:textStyle="bold"
+        android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
