--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -31,6 +31,7 @@
         android:background="#01DF8BED"
         android:text="HOME"
         android:textColor="#131313"
+        android:typeface="monospace"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,6 +52,7 @@
         android:layout_marginRight="261dp"
         android:layout_marginBottom="325dp"
         android:text="Test Alert"
+        android:background="@drawable/mybutton"
         android:textColor="#070000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +70,7 @@
         android:layout_marginRight="49dp"
         android:layout_marginBottom="483dp"
         android:text="Camera Settings"
+        android:background="@drawable/mybutton"
         android:textColor="#070000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,6 +88,8 @@
         android:layout_marginRight="261dp"
         android:layout_marginBottom="483dp"
         android:text="System Settings"
+
+        android:background="@drawable/mybutton"
         android:textColor="#070000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,6 +107,7 @@
         android:layout_marginRight="59dp"
         android:layout_marginBottom="325dp"
         android:text="User Profile"
+        android:background="@drawable/mybutton"
         android:textColor="#070000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,6 +125,7 @@
         android:layout_marginRight="164dp"
         android:layout_marginBottom="171dp"
         android:text="Notifications"
+        android:background="@drawable/mybutton"
         android:textColor="#090000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
