--- a/app/src/main/res/layout/accountb.xml
+++ b/app/src/main/res/layout/accountb.xml
@@ -17,6 +17,7 @@
         android:layout_marginRight="144dp"
         android:layout_marginBottom="103dp"
         android:text="Submit"
+        android:background="@drawable/mybutton"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -161,6 +162,7 @@
         android:layout_marginRight="146dp"
         android:layout_marginBottom="670dp"
         android:text="Create Account"
+        android:typeface="monospace"
         android:textColor="#0B0B0B"
         android:textSize="22sp"
         android:textStyle="bold"
