--- a/app/src/main/res/layout/accountb.xml
+++ b/app/src/main/res/layout/accountb.xml
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.491"
-        app:srcCompat="@drawable/backgroundpicture" />
+        app:srcCompat="@drawable/red_honeycomb_texture_amoled_wallpaper_4k_ultra_hdkrm7ec7ax8" />
 
     <EditText
         android:id="@+id/confpassword"
@@ -47,7 +47,7 @@
         android:layout_marginEnd="117dp"
         android:layout_marginRight="117dp"
         android:layout_marginBottom="355dp"
-        android:background="#C162D1"
+        android:background="#868587"
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="117dp"
         android:layout_marginRight="117dp"
         android:layout_marginBottom="415dp"
-        android:background="#C162D1"
+        android:background="#7F7D80"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -85,7 +85,7 @@
         android:layout_marginEnd="117dp"
         android:layout_marginRight="117dp"
         android:layout_marginBottom="293dp"
-        android:background="#C162D1"
+        android:background="#858385"
         android:ems="10"
         android:hint="Email "
         android:inputType="textPassword"
@@ -104,7 +104,7 @@
         android:layout_marginEnd="117dp"
         android:layout_marginRight="117dp"
         android:layout_marginBottom="539dp"
-        android:background="#C162D1"
+        android:background="#8A898A"
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPassword"
@@ -123,7 +123,7 @@
         android:layout_marginEnd="117dp"
         android:layout_marginRight="117dp"
         android:layout_marginBottom="477dp"
-        android:background="#C162D1"
+        android:background="#858485"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPassword"
@@ -142,7 +142,7 @@
         android:layout_marginEnd="117dp"
         android:layout_marginRight="117dp"
         android:layout_marginBottom="602dp"
-        android:background="#C162D1"
+        android:background="#888788"
         android:ems="10"
         android:hint="First Name"
         android:inputType="textPassword"
@@ -162,10 +162,10 @@
         android:layout_marginRight="146dp"
         android:layout_marginBottom="670dp"
         android:text="Create Account"
-        android:typeface="monospace"
-        android:textColor="#0B0B0B"
-        android:textSize="22sp"
+        android:textColor="#FDFCFC"
+        android:textSize="24sp"
         android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
