--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.509"
-        app:srcCompat="@drawable/backgroundpicture" />
+        app:srcCompat="@drawable/red_honeycomb_texture_amoled_wallpaper_4k_ultra_hdkrm7ec7ax8" />
 
     <EditText
         android:id="@+id/editText4"
@@ -102,7 +102,7 @@
         android:layout_marginEnd="99dp"
         android:layout_marginRight="99dp"
         android:layout_marginBottom="370dp"
-        android:background="#C162D1"
+        android:background="#FBFBFB"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,10 +122,10 @@
         android:layout_marginBottom="643dp"
         android:background="#01DF8BED"
         android:text="Log In"
-        android:textColor="#131313"
-        android:textSize="22sp"
+        android:textColor="#F8F5F5"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:typeface="monospace"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,8 +142,9 @@
         android:layout_marginRight="182dp"
         android:layout_marginBottom="514dp"
         android:text="Email:"
-        android:textColor="#090909"
+        android:textColor="#FFFDFD"
         android:textSize="18sp"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +160,7 @@
         android:layout_marginEnd="99dp"
         android:layout_marginRight="99dp"
         android:layout_marginBottom="470dp"
-        android:background="#C162D1"
+        android:background="#FDFCFD"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -178,8 +179,9 @@
         android:layout_marginRight="164dp"
         android:layout_marginBottom="418dp"
         android:text="Password:"
-        android:textColor="#101010"
+        android:textColor="#FBF9F9"
         android:textSize="18sp"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
