--- a/app/src/main/res/layout/phonecall.xml
+++ b/app/src/main/res/layout/phonecall.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundpicture">
+    android:background="@drawable/red_honeycomb_texture_amoled_wallpaper_4k_ultra_hdkrm7ec7ax8">
 
 
     <EditText
@@ -35,6 +35,7 @@
         android:textColor="#131313"
         android:textColorHint="#0E0E0E"
         android:textSize="20sp"
+        android:typeface="serif"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,17 +78,17 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
-        android:layout_marginLeft="85dp"
-        android:layout_marginTop="73dp"
-        android:layout_marginEnd="86dp"
-        android:layout_marginRight="86dp"
-        android:layout_marginBottom="628dp"
+        android:layout_marginStart="97dp"
+        android:layout_marginLeft="97dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginRight="97dp"
+        android:layout_marginBottom="641dp"
         android:text="Emergency Contact"
-        android:textColor="#040404"
-        android:textSize="22sp"
+        android:textColor="#FBFAFA"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:typeface="monospace"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,14 +104,17 @@
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="324dp"
-        android:text="Press to send notification to emergency contacts"
-        android:textColor="#050505"
+        android:text="Send Notification To Emergency Response"
+        android:textColor="#FBFAFA"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/sendButton"
@@ -156,8 +160,9 @@
         android:layout_marginRight="336dp"
         android:layout_marginBottom="402dp"
         android:text="Police"
-        android:textColor="#040404"
+        android:textColor="#FBFBFB"
         android:textSize="20sp"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -174,8 +179,9 @@
         android:layout_marginRight="200dp"
         android:layout_marginBottom="524dp"
         android:text="School Administrator"
-        android:textColor="#0B0B0B"
+        android:textColor="#FBF9F9"
         android:textSize="20sp"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
