--- a/app/src/main/res/layout/sample.xml
+++ b/app/src/main/res/layout/sample.xml
@@ -64,14 +64,14 @@
 
     <TextView
         android:id="@+id/texx"
-        android:layout_width="131dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="444dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginRight="152dp"
-        android:layout_marginBottom="230dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="452dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginRight="66dp"
+        android:layout_marginBottom="238dp"
         android:text="TextView"
         android:textColor="#FBFBFB"
         android:textSize="24sp"
